@@ -77,9 +77,9 @@ GWEN_INHERIT_FUNCTION_LIB_DEFS(GWEN_NETTRANSPORT, GWENHYWFAR_API)
  *
  */
 /*@{*/
-#define GWEN_NETTRANSPORT_FLAGS_PASSIVE 0x0001
-#define GWEN_NETTRANSPORT_FLAGS_EOF_IN  0x0002
-#define GWEN_NETTRANSPORT_FLAGS_EOF_OUT 0x0004
+#define GWEN_NETTRANSPORT_FLAGS_PASSIVE     0x0001
+#define GWEN_NETTRANSPORT_FLAGS_EOF_IN      0x0002
+#define GWEN_NETTRANSPORT_FLAGS_EOF_OUT     0x0004
 /*@}*/
 
 
